--- a/konzeption.html
+++ b/konzeption.html
@@ -19,42 +19,42 @@
     Die Verbundenheit zwischen Mensch und Natur. Oder doch nicht? 
 </p>
 
-<p id="text">
+
+<p class="text">
     STEP 1
 </p>
 
-<img src="blindbild.jpeg" alt="bild " id="blindbild">
+<img src="blindbild.jpeg" alt="bild " class="blindbild">
 
-<p id="text">
+<p class="text">
     STEP 2
 </p>
 
-<img src="blindbild.jpeg" alt="bild " id="blindbild">
+<img src="blindbild.jpeg" alt="bild " class="blindbild">
 
-<p id="text">
+<p class="text">
     STEP 3
 </p>
 
-<img src="blindbild.jpeg" alt="bild " id="blindbild">
+<img src="blindbild.jpeg" alt="bild " class="blindbild">
 
-<p id="text">
+<p class="text">
     STEP 4
 </p>
 
-<img src="blindbild.jpeg" alt="bild " id="blindbild">
+<img src="blindbild.jpeg" alt="bild " class="blindbild">
 
-<p id="text">
+<p class="text">
     STEP 5
 </p>
 
-<img src="blindbild.jpeg" alt="bild " id="blindbild">
+<img src="blindbild.jpeg" alt="bild " class="blindbild">
 
-<p id="text">
+<p class="text">
     STEP 6
 </p>
 
-<img src="blindbild.jpeg" alt="bild " id="blindbild">
+<img src="blindbild.jpeg" alt="bild " class="blindbild">
 
-    
 </body>
 </html>
