--- a/konzeption.html
+++ b/konzeption.html
@@ -12,7 +12,7 @@
 <img src="schwarzwald.jpeg" alt="bild schwarzwald" id="schwarzwald">
 
 <h1>
-    HABEN WIR EINFACH AUFGEHÖRT ZUZUHÖREN? 
+    HABEN WIR EINFACH AUFGEHÖRT ZUZUHÖREN? ?
 </h1>
 
 <p id="subline">
