Make over Layout und Inhalt

--- a/konzeption.html
+++ b/konzeption.html
@@ -9,52 +9,120 @@
 </head>
 <body>
 
-<img src="schwarzwald.jpeg" alt="bild schwarzwald" id="schwarzwald">
+    <header class="banner">
+        <div class="banner-content">
+            <h1>SCHÄTZEN UND SCHÜTZEN</h1>
+        </div>
+    </header>
 
-<h1>
-    HABEN WIR EINFACH AUFGEHÖRT ZUZUHÖREN? ?
-</h1>
+    <div class="intro">
+        <h2>Eine Projektdokumentation</h2>
+        <p>Hallo!<br>Unsere Namen sind Marie Eckel und Alexa Fuchs. Im Rahmen des Moduls Krativkonzeption an der Hochschule Furtwangen konzipierten und produzierten wir unseren eigenen künsterischen Film über den Schwarzwald. Unseren Prozess, unsere Gedankengänge und unser Vorgehen dokumentierten wir in sechs Schritten, die Ihr auf dieser Seite nachvollziehen könnt. <br>Zu unserem Film gelangt Ihr HIER. <br>Viel Spaß!</p>    
+    </div>
 
-<p id="subline">
-    Die Verbundenheit zwischen Mensch und Natur. Oder doch nicht? 
-</p>
+    <div class="container">
+        <div class="step">
+            <div class="text left">
+                <h2>Die Idee</h2>
+                <p>
+                    • Verbundenheit zwischen Mensch und Natur darstellen <br>
+                    • Die Einstellung zur Natur neu ausrichten <br>
+                    • Andere Sichtweise öffnen, um die Natur zu schätzen und 
+                       zu schützen</p>
+            </div>
+            <div class="image right">
+                <img src="Baum.jpeg" alt="Bild zu Schritt 1">
+            </div>
+        </div>
 
 
-<p class="text">
-    STEP 1
-</p>
+        <div class="step">
+            <div class="image left">
+                <img src="schwarzwald.jpeg" alt="Bild zu Schritt 2">
+            </div>
+            <div class="text right">
+                <h2>Vision 1.0</h2>
+                <p>Erste Vorstellung der Umsetzung: <br>
+                    • packende Bildvergleiche zwischen Mensch und Natur, die deren
+                       Parallelen aufweist (Storyboard) <br>
+                    • Fokus des Zuschauers über die Akustik lenken (harmonische
+                       vs. disharmonische Geräuschkulisse)
+                    </p>
+            </div>
+        </div>
 
-<img src="blindbild.jpeg" alt="bild " class="blindbild">
 
-<p class="text">
-    STEP 2
-</p>
+        <div class="step">
+            <div class="text left">
+                <h2>Probevideo</h2>
+                <p>Experimentelle Videoproduktion: <br>
+                    • Einstellungen, Perspektiven und Motive testen <br>
+                    • unterschiedliche Bild- und Tonkombination ausprobieren,
+                       wo bei der Schwerpunkt auf harmonisch / disharmonischen
+                       Geräuschen lag <br>
+                    • Kontrast zwischen "Da stimmt was nicht" und Harmonie
+                       Mensch & Natur</p>
+            </div>
+            <div class="image right">
+                <img src="Rinde.JPG" alt="Bild zu Schritt 3">
+            </div>
+        </div>
 
-<img src="blindbild.jpeg" alt="bild " class="blindbild">
+        <div class="step">
+            <div class="text left">
+                <h2>Feinjustierung</h2>
+                <p>Konzept überdenken: <br>
+                    • Zielgruppe genau festlegen, um die passenden Stil
+                       des Videos zu treffen <br>
+                    • Das Probevideo schwamm zwischen unterhaltsamen
+                       YouTube Video und künstlerischem Film <br>
+                    • Wir bleiben unserer Grundidee treu und fokussieren uns auf
+                       das künstlerische Genre </p>
+            </div>
+            <div class="image left">
+                <img src="Blume.JPG" alt="Bild zu Schritt 3">
+            </div>
+        </div>
 
-<p class="text">
-    STEP 3
-</p>
 
-<img src="blindbild.jpeg" alt="bild " class="blindbild">
+        <div class="step">
+            <div class="text left">
+                <h2>Vision 2.0</h2>
+                <p>Zielsetzung für den zweiten Dreh: <br>
+                    • ausdrucksstarke Motive aufnehmen <br>
+                    • Lange Einstellungen, die den Zuschauer auch zwingen genau und lange den Blick auf etwas zu richten und bis ins Detail wahrzunehmen <br>
+                    • Nach wie vor die Geräusche als starkes Stilmittel einbauen</p>
+            </div>
+            <div class="image right">
+                <img src="schwarzwald-urlaub-wandern-noerdlicher-schwarzwald-nordschwarzwald.jpg.webp" alt="Bild zu Schritt 3">
+            </div>
+        </div>
 
-<p class="text">
-    STEP 4
-</p>
 
-<img src="blindbild.jpeg" alt="bild " class="blindbild">
+        <div class="step">
+            <div class="text left">
+                <h2>Schritt 3</h2>
+                <p>Beschreibung des dritten Schrittes.</p>
+            </div>
+            <div class="image right">
+                <img src="image3.jpg" alt="Bild zu Schritt 3">
+            </div>
+        </div>
 
-<p class="text">
-    STEP 5
-</p>
 
-<img src="blindbild.jpeg" alt="bild " class="blindbild">
+        <div class="step">
+            <div class="text left">
+                <h2>Schritt 3</h2>
+                <p>Beschreibung des dritten Schrittes.</p>
+            </div>
+            <div class="image right">
+                <img src="image3.jpg" alt="Bild zu Schritt 3">
+            </div>
+        </div>
+        <!-- Weitere Schritte können hier hinzugefügt werden -->
+    </div>
 
-<p class="text">
-    STEP 6
-</p>
-
-<img src="blindbild.jpeg" alt="bild " class="blindbild">
-
+    
 </body>
+
 </html>
