--- a/konzeption.html
+++ b/konzeption.html
@@ -11,13 +11,13 @@
 
     <header class="banner">
         <div class="banner-content">
-            <h1>SCHÄTZEN UND SCHÜTZEN</h1>
+            <h1>SCHÜTZEN DURCH SCHÄTZEN</h1>
         </div>
     </header>
 
     <div class="intro">
-        <h2>Eine Projektdokumentation</h2>
-        <p>Hallo!<br>Unsere Namen sind Marie Eckel und Alexa Fuchs. Im Rahmen des Moduls Krativkonzeption an der Hochschule Furtwangen konzipierten und produzierten wir unseren eigenen künsterischen Film über den Schwarzwald. Unseren Prozess, unsere Gedankengänge und unser Vorgehen dokumentierten wir in sechs Schritten, die Ihr auf dieser Seite nachvollziehen könnt. <br>Zu unserem Film gelangt Ihr HIER. <br>Viel Spaß!</p>    
+        <h2>Die Projektdokumentation</h2>
+        <p>Hallo!<br>Unsere Namen sind Marie Eckel und Alexa Fuchs. Im Rahmen des Moduls Krativkonzeption an der Hochschule Furtwangen entwickelten wir unser eigenes Videoprojekt zum Thema Umweltschutz Schwarzwald. Den Werdegang des Videos und unser Vorgehen erklären die folgenden sechs Schritte von der ersten Idee bis zum fertigen Projekt. <br>Unseren Film kannst du HIER anschauen. <br>Viel Spaß!</p>    
     </div>
 
     <div class="container">
@@ -25,11 +25,7 @@
             <div class="text left">
                 <h2>Die Idee</h2>
                 <p>
-                    • Verbundenheit zwischen Mensch und Natur darstellen <br>
-                    • Die Einstellung zur Natur neu ausrichten <br>
-                    • Andere Sichtweise öffnen, um die Natur zu schätzen und 
-                       zu schützen</p>
-            </div>
+                    Wir möchten an die ursprüngliche Einstellung zur Natur erinnern und ihren Wert vermitteln, indem wir die Verbundenheit zwischen Mensch und Natur darstellen.            </div>
             <div class="image right">
                 <img src="Baum.jpeg" alt="Bild zu Schritt 1">
             </div>
@@ -42,11 +38,7 @@
             </div>
             <div class="text right">
                 <h2>Vision 1.0</h2>
-                <p>Erste Vorstellung der Umsetzung: <br>
-                    • packende Bildvergleiche zwischen Mensch und Natur, die deren
-                       Parallelen aufweist (Storyboard) <br>
-                    • Fokus des Zuschauers über die Akustik lenken (harmonische
-                       vs. disharmonische Geräuschkulisse)
+                <p>Ursprünglich wollten wir diese Botschaft überwiegend mit Bildvergleichen von Mensch und Natur ausdrücken. Dabei hatten wir den Plan, die optischen Parallelen im Split Screen Format gegenüberzustellen und den Fokus des Zuschauers über die Akustik zu lenken.
                     </p>
             </div>
         </div>
