--- a/konzeption.html
+++ b/konzeption.html
@@ -17,7 +17,10 @@
 
     <div class="intro">
         <h2>Die Projektdokumentation</h2>
-        <p>Hallo!<br>Unsere Namen sind Marie Eckel und Alexa Fuchs. Im Rahmen des Moduls Krativkonzeption an der Hochschule Furtwangen entwickelten wir unser eigenes Videoprojekt zum Thema Umweltschutz Schwarzwald. Den Werdegang des Videos und unser Vorgehen erklären die folgenden sechs Schritte von der ersten Idee bis zum fertigen Projekt. <br>Unseren Film kannst du HIER anschauen. <br>Viel Spaß!</p>    
+        <p>Hallo!<br>Unsere Namen sind Marie Eckel und Alexa Fuchs. 
+            Im Rahmen des Moduls Krativkonzeption an der Hochschule Furtwangen entwickelten wir unser eigenes Videoprojekt zum Thema Umweltschutz Schwarzwald. 
+            Den Werdegang des Videos und unser Vorgehen erklären die folgenden sechs Schritte von der ersten Idee bis zum fertigen Projekt. 
+            <br>Unseren Film kannst du HIER anschauen. <br>Viel Spaß!</p>    
     </div>
 
     <div class="container">
@@ -25,7 +28,11 @@
             <div class="text left">
                 <h2>Die Idee</h2>
                 <p>
-                    Wir möchten an die ursprüngliche Einstellung zur Natur erinnern und ihren Wert vermitteln, indem wir die Verbundenheit zwischen Mensch und Natur darstellen.            </div>
+                    Unser Video Projekt „Schützen durch schätzen“, erinnert den Zuschauer an die ursprüngliche Einstellung zur Natur. 
+                    Dabei wird der Wert der Natur vermittelt, in dem wir die Verbundenheit zwischen Mensch und Natur darstellen. 
+                    Das Video soll die Sinne fürs Detail schärfen – gleichermaßen hören und sehen.            
+                </div>
+
             <div class="image right">
                 <img src="Baum.jpeg" alt="Bild zu Schritt 1">
             </div>
@@ -37,8 +44,9 @@
                 <img src="schwarzwald.jpeg" alt="Bild zu Schritt 2">
             </div>
             <div class="text right">
-                <h2>Vision 1.0</h2>
-                <p>Ursprünglich wollten wir diese Botschaft überwiegend mit Bildvergleichen von Mensch und Natur ausdrücken. Dabei hatten wir den Plan, die optischen Parallelen im Split Screen Format gegenüberzustellen und den Fokus des Zuschauers über die Akustik zu lenken.
+                <h2>Konzept</h2>
+                <p>Ursprünglich wollten wir diese Botschaft überwiegend mit Bildvergleichen von Mensch und Natur ausdrücken. 
+                    Dabei hatten wir den Plan, die optischen Parallelen im Split Screen Format gegenüberzustellen und den Fokus des Zuschauers über die Akustik zu lenken.
                     </p>
             </div>
         </div>
@@ -47,13 +55,10 @@
         <div class="step">
             <div class="text left">
                 <h2>Probevideo</h2>
-                <p>Experimentelle Videoproduktion: <br>
-                    • Einstellungen, Perspektiven und Motive testen <br>
-                    • unterschiedliche Bild- und Tonkombination ausprobieren,
-                       wo bei der Schwerpunkt auf harmonisch / disharmonischen
-                       Geräuschen lag <br>
-                    • Kontrast zwischen "Da stimmt was nicht" und Harmonie
-                       Mensch & Natur</p>
+                <p>Für unser erstes Probe-Video “filmten wir einfach drauf los“. 
+                    Wir experimentierten mit verschiedenen Motiven und Perspektiven, die der Wald hergibt. 
+                    Ohne konkreten Plan entstanden Videoaufnahmen, die Potential zur Optimierung hatten. 
+                    In der Post Production spielten wir mit dem Kontrast zwischen dem Gefühl “da stimmt was nicht“ (menschliche Geräusche als Störfaktor) und der visuellen Harmonie.</p>
             </div>
             <div class="image right">
                 <img src="Rinde.JPG" alt="Bild zu Schritt 3">
@@ -63,13 +68,13 @@
         <div class="step">
             <div class="text left">
                 <h2>Feinjustierung</h2>
-                <p>Konzept überdenken: <br>
-                    • Zielgruppe genau festlegen, um die passenden Stil
-                       des Videos zu treffen <br>
-                    • Das Probevideo schwamm zwischen unterhaltsamen
-                       YouTube Video und künstlerischem Film <br>
-                    • Wir bleiben unserer Grundidee treu und fokussieren uns auf
-                       das künstlerische Genre </p>
+                <p>Nach unserem ersten Versuch, stellten wir fest, dass wir unsere Zielgruppe und die Plattform genauer definieren müssen. 
+                    Um unsere Botschaft in einem geeigneten Stil zu verpacken, entschieden wir uns dafür, 
+                    dass das Video in Tourismus Zentren oder im Naturpark Schwarzwald zu sehen sein soll. 
+                    Im Gegenteil zu schnellen Schnitten und Entertainment nahmen wir uns vor, 
+                    dem Video emotionale Tiefe zu verleihen und dem Zuschauer Raum für seine persönliche Interpretation zu geben. 
+                    Durch dichte und intensive Atmosphäre und die visuellen und auditiven Kontraste, 
+                    möchten wir eine fast unangenehme einzigartige Erfahrung schaffen, die den Betrachter berührt und zum Nachdenken anregt.</p>
             </div>
             <div class="image left">
                 <img src="Blume.JPG" alt="Bild zu Schritt 3">
@@ -79,11 +84,13 @@
 
         <div class="step">
             <div class="text left">
-                <h2>Vision 2.0</h2>
-                <p>Zielsetzung für den zweiten Dreh: <br>
-                    • ausdrucksstarke Motive aufnehmen <br>
-                    • Lange Einstellungen, die den Zuschauer auch zwingen genau und lange den Blick auf etwas zu richten und bis ins Detail wahrzunehmen <br>
-                    • Nach wie vor die Geräusche als starkes Stilmittel einbauen</p>
+                <h2>Finale Umsetzung</h2>
+                <p>Im zweiten Dreh lichteten wir die Motive ab, die für die Umsetzung unseres überdachten Konzepts notwendig sind. 
+                    Dabei konzentrieren wir uns auf neue ausdrucksstarke Motive, Detailaufnahmen und Motive vom ersten Dreh, die wir perfektionieren können. 
+                    In der Post Production setzen wir auf die menschlichen Geräusche als einzigen Störfaktor, 
+                    die ohne spannungsaufbauende Musik besser wirken können. 
+                    Damit der Betrachter alle schönen Details wahrnehmen kann und ihm das Unwohlsein aufgedrängt werden kann, 
+                    verlängerten wir die Dauer der einzelnen Einstellungen.</p>
             </div>
             <div class="image right">
                 <img src="schwarzwald-urlaub-wandern-noerdlicher-schwarzwald-nordschwarzwald.jpg.webp" alt="Bild zu Schritt 3">
@@ -93,7 +100,7 @@
 
         <div class="step">
             <div class="text left">
-                <h2>Schritt 3</h2>
+                <h2>Rückblick</h2>
                 <p>Beschreibung des dritten Schrittes.</p>
             </div>
             <div class="image right">
