--- a/konzeption.html
+++ b/konzeption.html
@@ -84,7 +84,7 @@
                     <div class="details">
                         <video id="video" controls src="projekt_zuhoeren_2.mov"></video>
                         <p>Komprimiertes Video <br>
-                         <a href="YOutubelink">klicke hier</a> für das Originalvideo</p>
+                         <a href="https://www.youtube.com/watch?v=MNsroCvRHoY" target="_blank" >klicke hier</a> für das Originalvideo</p>
                     </div>
                 </div>
             <div class="image right">
